2006-02-17  9:38 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelRelaxNegativeCells,
	gridParallelRelaxNegativeFaceAreaUV) they will use LP if
	#define USE_LINEAR_PROGRAMMING_FOR_UNTANGLING (TRUE).

2006-02-17  9:22 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV,gridUntangleVolume) to permit
	use in parallel, added a allow_movement_near_ghost_nodes argment.

2005-02-16 16:30 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.10 Release. Tagging before folding simplex (tableau)
	untangling into production parallel version.

2006-02-15  8:57 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerEquateLengths) refactored to be more
	general, it can have an degree of faces (not just four).
	* src/gridfacer.c (gridfacerSplitEdge) extracted low-level
	mechanics from higher-level gridfacerSplit.
	
2006-02-14 15:49 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitSliverCell) destroy sliver cells by
	splitting then into four.

2006-02-14 14:40 Mike Park  <mike.park@nasa.gov>

	* src/intersect.c (intersectSegmentSegment) test the intersection
	of two lines.

2006-02-14 11:55 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridCollapseWedgeCells) renamed from
	gridCollapseSlivers.

2006-02-13 19:45 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV,gridUntangleVolume) added a
	recursive_depth arg to allow allow untangling to relax faces that
	are currently tight constraints.

2006-02-11 12:37 Mike Park  <mike.park@nasa.gov>

	* src/intersect.c (intersectTriangleSegment) exposed the ratio of
	intersection.

2006-02-10 13:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitVolumeEdgesIntersectingFacesAround)
	split volume cells with faces near node to help localize
	projection.
	* src/gridinsert.c (gridCollapseSlivers) remove slivers with
	collapse to aid untangling.

2006-02-10 13:21 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV,gridUntangleVolume) exclude